# minecraft-dashboard

./: .gitignore  .releaserc  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yaml  release.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Card.css  Card.jsx  Header.jsx  InfoCard.css  InfoCard.jsx  LinksBar.css  LinksBar.jsx  PlayerListCard.css  PlayerListCard.jsx  ServerInfoCard.css  ServerInfoCard.jsx  ServerStatusCard.css  ServerStatusCard.jsx
minecraft_dashboard/: __main__.py  api.py  config.py  const.py  models.py  utils.py  watcher.py
scripts/: generate-client.js
